tests/codegen/fail/interface/struct/derive_no_fields.rs
use coasys_juniper::GraphQLInterface;

#[derive(GraphQLInterface)]
struct Character {}

fn main() {}
